interval_age_pop has been removed from the list of arguments of all bestcost functions

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -223,7 +223,7 @@ check_bestcost(result_list_bestcost = att_noise_ha_bestcost,
 ```{r Test probability of dying}
 # Use function
 prob_dying_airqplus <- 
-  bestcost::get_prob_dying(
+  bestcost::get_one_year_prob_dying(
     first_age_pop = 0,
     last_age_pop = 14,
     interval_age_pop = 5,
@@ -248,7 +248,6 @@ impact_yll_expDistribution[[input_data_mortality$year[2]]][[input_data_mortality
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
-      interval_age_pop = 1,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -279,7 +278,6 @@ impact_yll_expDistribution_1rr[[input_data_mortality$year[2]]][[input_data_morta
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
-      interval_age_pop = 1,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -317,7 +315,6 @@ for(i in 2){                           # Use this if you want to evaluate only o
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
-      interval_age_pop = 1,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -353,7 +350,6 @@ for(i in 2){                           # Use this if you want to evaluate only o
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
-      interval_age_pop = 1,
       prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -388,7 +384,6 @@ for(i in 2){                           # Use this if you want to evaluate only o
     erf_shape = "log_linear",
     first_age_pop = 0,
     last_age_pop = 99,
-    interval_age_pop = 1,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -491,7 +486,6 @@ yld <- attribute_yld_lifetable_rr(
   rr_increment = 10, 
   erf_shape = "log_linear",
   first_age_pop = 0,last_age_pop = 99,
-  interval_age_pop = 1,
   prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
   prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
   prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -525,7 +519,6 @@ yld_1rr <- attribute_yld_lifetable_rr(
   rr_increment = 10, 
   erf_shape = "log_linear",
   first_age_pop = 0,last_age_pop = 99,
-  interval_age_pop = 1,
   prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
   prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
   prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -621,7 +614,6 @@ comparison_deaths_lifetable_delta <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
-    interval_age_pop_1 = 1,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -631,14 +623,13 @@ comparison_deaths_lifetable_delta <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
-    interval_age_pop_2 = 1,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
     population_male_2 = lifetable_withPopulation[["male"]]$population, 
     population_female_2 = lifetable_withPopulation[["female"]]$population, 
-    year_of_analysis_2 = 2021, 
+     year_of_analysis_2 = 2019,
     info_1 = input_data_mortality$pollutant[i],
     info_2 = input_data_mortality$pollutant[i], 
     min_age = 30,
@@ -658,7 +649,6 @@ comparison_deaths_lifetable_pif  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
-    interval_age_pop_1 = 1,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -668,7 +658,6 @@ comparison_deaths_lifetable_pif  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
-    interval_age_pop_2 = 1,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -699,7 +688,6 @@ comparison_yll_lifetable_delta  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
-    interval_age_pop_1 = 1,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -709,7 +697,6 @@ comparison_yll_lifetable_delta  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
-    interval_age_pop_2 = 1,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -736,7 +723,6 @@ comparison_yll_lifetable_pif <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
-    interval_age_pop_1 = 1,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -746,7 +732,6 @@ comparison_yll_lifetable_pif <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
-    interval_age_pop_2 = 1,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -779,7 +764,6 @@ comparison_yld_lifetable_delta  <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
-    interval_age_pop_1 = 1,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -789,7 +773,6 @@ comparison_yld_lifetable_delta  <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
-    interval_age_pop_2 = 1,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -817,7 +800,6 @@ comparison_yld_lifetable_pif <-
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
-    interval_age_pop_1 = 1,
     prob_natural_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -827,7 +809,6 @@ comparison_yld_lifetable_pif <-
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
-    interval_age_pop_2 = 1,
     prob_natural_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
