Rename "population_male" with "population_midyear_male". Same for female.

--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -223,7 +223,7 @@ check_bestcost(result_list_bestcost = att_noise_ha_bestcost,
 ```{r Test probability of dying}
 # Use function
 prob_dying_airqplus <- 
-  bestcost::get_one_year_prob_dying(
+  bestcost::get_prob_dying_by_single_age(
     first_age_pop = 0,
     last_age_pop = 14,
     interval_age_pop = 5,
@@ -252,8 +252,8 @@ impact_yll_expDistribution[[input_data_mortality$year[2]]][[input_data_mortality
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
       prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-      population_male = lifetable_withPopulation[["male"]]$population, 
-      population_female = lifetable_withPopulation[["female"]]$population, 
+      population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+      population_midyear_female = lifetable_withPopulation[["female"]]$population, 
       year_of_analysis = 2019, 
       info = input_data_mortality$pollutant[2], 
       min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
@@ -282,8 +282,8 @@ impact_yll_expDistribution_1rr[[input_data_mortality$year[2]]][[input_data_morta
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
       prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-      population_male = lifetable_withPopulation[["male"]]$population, 
-      population_female = lifetable_withPopulation[["female"]]$population, 
+      population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+      population_midyear_female = lifetable_withPopulation[["female"]]$population, 
       year_of_analysis = 2019, 
       info = input_data_mortality$pollutant[2], 
       min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2],
@@ -319,8 +319,8 @@ for(i in 2){                           # Use this if you want to evaluate only o
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
       prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-      population_male = lifetable_withPopulation[["male"]]$population, 
-      population_female = lifetable_withPopulation[["female"]]$population, 
+      population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+      population_midyear_female = lifetable_withPopulation[["female"]]$population, 
       year_of_analysis = 2019, 
       info = input_data_mortality$pollutant[i], 
       min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i],
@@ -354,8 +354,8 @@ for(i in 2){                           # Use this if you want to evaluate only o
       prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
       prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
       prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-      population_male = lifetable_withPopulation[["male"]]$population, 
-      population_female = lifetable_withPopulation[["female"]]$population, 
+      population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+      population_midyear_female = lifetable_withPopulation[["female"]]$population, 
       year_of_analysis = 2019, 
       info = input_data_mortality$pollutant[i], 
       min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i],
@@ -388,8 +388,8 @@ for(i in 2){                           # Use this if you want to evaluate only o
     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male = lifetable_withPopulation[["male"]]$population, 
-    population_female = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis = 2019, 
     info = input_data_mortality$pollutant[i], 
     min_age = input_data_mortality$min_age[i],
@@ -490,8 +490,8 @@ yld <- attribute_yld_lifetable_rr(
   prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
   prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
   prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-  population_male = lifetable_withPopulation[["male"]]$population, 
-  population_female = lifetable_withPopulation[["female"]]$population,
+  population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+  population_midyear_female = lifetable_withPopulation[["female"]]$population,
   year_of_analysis = 2019, 
   info = input_data_mortality$pollutant[2], 
   # min_age = 20,
@@ -523,8 +523,8 @@ yld_1rr <- attribute_yld_lifetable_rr(
   prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
   prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
   prob_total_death_female = lifetable_withPopulation[["female"]]$death_probability_total,
-  population_male = lifetable_withPopulation[["male"]]$population, 
-  population_female = lifetable_withPopulation[["female"]]$population,
+  population_midyear_male = lifetable_withPopulation[["male"]]$population, 
+  population_midyear_female = lifetable_withPopulation[["female"]]$population,
   year_of_analysis = 2019, 
   info = input_data_mortality$pollutant[2], 
   # min_age = 20,
@@ -618,8 +618,8 @@ comparison_deaths_lifetable_delta <-
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_1 = lifetable_withPopulation[["male"]]$population, 
-    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_1 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
@@ -627,8 +627,8 @@ comparison_deaths_lifetable_delta <-
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_2 = lifetable_withPopulation[["male"]]$population, 
-    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
      year_of_analysis_2 = 2019,
     info_1 = input_data_mortality$pollutant[i],
     info_2 = input_data_mortality$pollutant[i], 
@@ -653,8 +653,8 @@ comparison_deaths_lifetable_pif  <-
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_1 = lifetable_withPopulation[["male"]]$population, 
-    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_1 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
@@ -662,8 +662,8 @@ comparison_deaths_lifetable_pif  <-
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_2 = lifetable_withPopulation[["male"]]$population, 
-    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
     info_1 = NULL,
     info_2 = NULL, 
@@ -692,8 +692,8 @@ comparison_yll_lifetable_delta  <-
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_1 = lifetable_withPopulation[["male"]]$population, 
-    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_1 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
@@ -701,8 +701,8 @@ comparison_yll_lifetable_delta  <-
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_2 = lifetable_withPopulation[["male"]]$population, 
-    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
     info_1 = input_data_mortality$pollutant[i],
     info_2 = input_data_mortality$pollutant[i], 
@@ -727,8 +727,8 @@ comparison_yll_lifetable_pif <-
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_1 = lifetable_withPopulation[["male"]]$population, 
-    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_1 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
@@ -736,8 +736,8 @@ comparison_yll_lifetable_pif <-
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_2 = lifetable_withPopulation[["male"]]$population, 
-    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
     info_1 = NULL,
     info_2 = NULL, 
@@ -768,8 +768,8 @@ comparison_yld_lifetable_delta  <-
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_1 = lifetable_withPopulation[["male"]]$population, 
-    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_1 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
@@ -777,8 +777,8 @@ comparison_yld_lifetable_delta  <-
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_2 = lifetable_withPopulation[["male"]]$population, 
-    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
     info_1 = input_data_mortality$pollutant[i],
     info_2 = input_data_mortality$pollutant[i], 
@@ -804,8 +804,8 @@ comparison_yld_lifetable_pif <-
     prob_natural_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_1 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_1 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_1 = lifetable_withPopulation[["male"]]$population, 
-    population_female_1 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_1 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_1 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_1 = 2019, 
     first_age_pop_2 = 0,
     last_age_pop_2 = 99,
@@ -813,8 +813,8 @@ comparison_yld_lifetable_pif <-
     prob_natural_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male_2 = lifetable_withPopulation[["male"]]$death_probability_total,
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
-    population_male_2 = lifetable_withPopulation[["male"]]$population, 
-    population_female_2 = lifetable_withPopulation[["female"]]$population, 
+    population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
+    population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
     info_1 = NULL,
     info_2 = NULL, 
